# studio-gradle-cmake-go

./: .gitignore  README.md  go.sh  go2.sh
aplikace2/: gradle.properties  settings.gradle
aplikace2/app/: build.gradle
aplikace2/app/src/main/: AndroidManifest.xml
aplikace2/app/src/main/cpp/: CMakeLists.txt  helpers.go  vulkandraw.go
aplikace2/app/src/main/cpp/app_android/: main.go
aplikace2/app/src/main/go/: bindata.go  go.mod  go.sum
aplikace2/app/src/main/res/values/: strings.xml  themes.xml
aplikace2/app/src/main/res/values-night/: themes.xml
aplikace2/gradle/: libs.versions.toml
